<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="splashViewModel"
            type="com.robinhood.librarysample.ui.splash.viewmodel.SplashViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleX="0.0"
            android:scaleY="0.0"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_github_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_github_id_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_github_id"
                android:imeOptions="actionNext"
                android:inputType="text|textVisiblePassword"
                android:lines="1"
                android:nextFocusForward="@+id/input_github_repo_editText"
                app:binding="@{splashViewModel.idText}" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_github_repo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_github_id_layout"
            android:layout_marginBottom="10dp"
            android:alpha="0.0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_github_repo_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_github_repository"
                android:imeOptions="actionDone"
                android:inputType="text|textVisiblePassword"
                android:lines="1"
                app:binding="@{splashViewModel.repositoryText}" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_github_access_token_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/enter_main_page_button"
            android:alpha="0.0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_github_access_token_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_github_access_token"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                app:binding="@{splashViewModel.accessTokenText}" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/enter_main_page_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:alpha="0.0"
            android:background="@drawable/rounded_button_color_primary"
            android:onClick="@{splashViewModel::onClickEnterMainView}"
            android:scaleX="0"
            android:scaleY="0"
            android:text="@string/enter_main_page"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</layout>